Changes for 1.1alpha1:

 - added table audit (Alexei)
 - added audit.php (Alexei)
 - new default port numbers for agent and trapper, 10050 and 10051 (Alexei)
 - better internal coding standard for ZABBIX agent (Alexei)
 - added support for md5sum for files less than 64M (Alexei)
 - added include md5.c and md5.h (Alexei)
 - remove trends.php, trend.php (Alexei)
 - remove compare.php, chart3.php (Alexei)
 - show trigger dependencies in list of configuration of triggers (Alexei)
 - make Zabbix reset nextcheck for items when updating or adding a trigger (Alexei)
 - minimum value of PingerFrequency changed to 1 (Alexei)
 - different icons depending on a triger status for sysmaps (Alexei)
 - added column sysmaps_hosts.icon_on (Alexei)
 - hierarchial maps (Alexei)
 - added column sysmaps_hosts.url (Alexei)
 - upgrades/dbpatches/1.0_to_1.1alpha1/data/images/ (Alexei)
 - added support for custom multiplier (Alexei)
 - added column items.formula (Alexei)
 - added support of SNMPv3 (Alexei)
 - added columns snmpv3_* to table items (Alexei)
 - increased max number of network interfaces to 16 for zabbix_agentd (Alexei)
 - added command line parameters -c <config> and -h to zabbix_trapperd (Alexei)
 - added command line parameters -c <config> and -h to zabbix_agentd (Alexei)
 - added command line parameters -c <config> and -h to zabbix_suckerd (Alexei)
 - added support for customised Y axis for graphs (Alexei)
 - added columns graphs.(yaxistype|yaxismin|yaxismax) (Alexei)
 - send date as part of email alerts (Alexei)
 - added SuSE 9.1 startup scripts. Thanks to A.Tophofen. (Alexei)
 - change of architecture to multi-threaded model (Alexei)
 - fixed typo: getuid() -> getgid() in daemon_init() (Alexei)
 - added housekeeping of trends (Alexei)
 - added column items.trends (Alexei)
 - added escaping of SQL statements where needed (Alexei)
 - added src/zabbix_sucker/checks_agent.[h,c] (Alexei)
 - added src/zabbix_sucker/checks_internal.[h,c] (Alexei)